examples/typechecking/type_annotations.an
import Std.C.puts, exit
import Std.C

foo (_: I32) (_: String) : Char = 'a'

bar: fn a a -> I32 =
    fn _ b -> b

baz (a: Usz): Ptr a =
    transmute a

main () =
    exit2 = exit
    puts2: fn C.String -> I32 = puts

    exit2 "test"
    puts2
    ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// import Std.C.puts, exit
// import Std.C
// 
// (foo: fn I32 String -> Char pure) ((_: I32)) ((_: String)) : Char pure = 'a'
// 
// (bar: fn a a -> I32 pure) =
//     fn (_: a) (b: a) -> (b: a)
// 
// (baz: fn Usz -> Ptr a pure) ((a: Usz)) : Ptr a pure =
//     (transmute: fn Usz -> Ptr a pure) (a: Usz)
// 
// (main: fn Unit -> Unit pure) () =
//     (exit2: fn I32 -> Unit pure) = (exit: fn I32 -> Unit pure)
//     (puts2: fn String -> I32) = (puts: fn String -> I32 pure)
//     (exit2: fn I32 -> Unit pure) "test"
//     (puts2: fn String -> I32)
//     ()

// expected stderr:
// examples/typechecking/type_annotations.an:7:15
// 6 | bar: fn a a -> I32 =
//   |     // error: The body of this function has type a but it is expected to return I32
// 7 |     fn _ b -> b
//   |               ^
// 
// examples/typechecking/type_annotations.an:16:11
// 16 |     exit2 "test"	// error: Argument 1 has type String but I32 was expected
//    |           ^^^^^^
// 17 |     puts2
// 
// Found 2 errors and 0 warnings

